--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,10 @@
 
  @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i&display=swap');
 
-body {
+ @import url('https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital@1&display=swap');
+
+
+ body {
   background-color: rgb(58, 193, 98);
   color: white;
   font-family: 'Playfair Display', serif;
@@ -115,6 +118,11 @@ h1 {
   font-style: normal;
 }
 
+.tags:before {
+  content: ", ";
+  font-style: normal;
+}
+
 @media (min-width: 768px) {
   body {
     padding: 25px;
@@ -140,11 +148,12 @@ h1 {
     padding: 25px 25px 15px 55px;
     background: rgba(0, 0, 0, 0.1);
     border-left: 5px solid rgba(0, 0, 0, 0.3);
-    border-radius: 0 4px 4px 0;
+    border-radius: 0 10px 10px 0;
   }
 
   .quote {
     font-size: 4rem;
+    font-family: 'Ibarra Real Nova', serif;
   }
 
   .quote:before,
